fix misalignment of feature text

--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,8 @@ body {
   margin: 15rem 0;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-gap: 6rem; }
+  grid-gap: 6rem;
+  align-items: start; }
 
 .feature {
   display: grid;
@@ -60,7 +61,8 @@ body {
     fill: #c69963;
     width: 4.5rem;
     height: 4.5rem;
-    grid-row: 1 / span 2; }
+    grid-row: 1 / span 2;
+    transform: translateY(-1rem); }
   .feature__text {
     font-size: 1.7rem; }
 
