--- a/sass/_features.scss
+++ b/sass/_features.scss
@@ -6,6 +6,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 6rem;
+  align-items: start;
 }
 
 .feature {
@@ -21,6 +22,7 @@
     height: 4.5rem;
 
     grid-row: 1 / span 2;
+    transform: translateY(-1rem);
   }
 
   &__text {
